--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    text-align: center;
+    font-family: 'Jost', sans-serif;
+    
+    /*
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
+    */
+}
+:root {
+    --SHADOW: 0 4px 6px rgba(0,0,0,0.1);
+  }
 
 
 /*FILTER ITEMS*/
@@ -42,6 +58,7 @@
 
 .login-banner {
     background-color: hsl(2, 71%, 73%);
+    background-color: #B01030;
     color: white;
     padding: 20px;
     width: 100%;
@@ -93,7 +110,7 @@
 }
 
 .login-error {
-    color: #d13838;
+    color: #B01030;
     margin-top: 15px;
     font-weight: 500;
 }
@@ -103,22 +120,6 @@
 /* DASHBOARD PAGE */
 
 
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    text-align: center;
-    font-family: 'Jost', sans-serif;
-    
-    /*
-    border-width: 1px;
-    border-color: black;
-    border-style: solid;
-    */
-}
-:root {
-    --SHADOW: 0 4px 6px rgba(0,0,0,0.1);
-  }
 
 .container {
     display: grid;
@@ -130,6 +131,7 @@
 .banner {
     background-color: #110302;
     background-color: #9d3834;
+    background-color: #B01030;
     color: white;
     padding: 1px;
     display: grid;
@@ -204,19 +206,20 @@
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-between;
-    padding: 1px;
-    gap: 0;
 
-    }
+    justify-content: space-between;
+    justify-content: center;
+
+    align-content: space-between;
+    padding: 10px;
+    gap: 10px;
+    width:100%;
+
+}
     
     
 .card {
     padding: 1px;
-    min-height: 100px;
-    max-height: 200px;
-    width: 150px;
     border-radius: 10%;
     position: relative;
     overflow: hidden;
@@ -224,6 +227,14 @@
     box-shadow:  var(--SHADOW);
     text-shadow: var(--SHADOW);
 
+    min-height: 100px;
+    max-height: 250px;
+    flex: 1; /* Make cards grow to fill available space */
+    min-width: 120px; /* Minimum width for very small screens */
+    max-width: 250px; /* Maximum width to prevent too large cards */
+    background-color:#fff0f0; /* Base color for all cards */
+
+    border-bottom: 5px solid #bb7987; /* Cherry color top border */
     }
 
 .card:hover {
@@ -235,7 +246,7 @@
     
     height: 30%;
     padding: 1px;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 500;
     color: #7b7575;   
 
@@ -268,7 +279,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    margin: 20px;
+    margin: 40px;
     
     
     
@@ -280,6 +291,10 @@
     box-shadow: var(--SHADOW);
     min-width: 0;
     transition: transform .2s ease;
+    border-top: 5px solid #B01030; /* Cherry color top border */
+    border-left: 2px solid #e0e0e0;
+    border-right: px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .chart-container:hover {
